[package]
name = "rtcm-json"
version = "0.6.0"
authors = ["Martin Håkansson <martinhakansson@yahoo.com>"]
categories = ["encoding","command-line-interface", "command-line-utilities","parser-implementations"]
description = "JSON serialization/deserialization of RTCM v. 3"
keywords = ["rtcm","serde","json","gnss","gps","galileo","glonass","beidou","navic","ntrip-client","ntrip","rtcm-parser","serialization","deserialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinhakansson/rtcm-json.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtcm-rs = { version = "0.7.0", features = ["serde"] }
serde_json = "1.0.91"
circular = "0.3.0"
clap = { version = "4.1.1", features = ["derive"] }
base64 = "0.21.0"
chrono = "0.4.23"
version = "3.0.0"
